# ChangeLog for x11-wm/wmii
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/wmii/ChangeLog,v 1.7 2005/06/04 20:17:27 tester Exp $

  04 Jun 2005; Olivier Crête <tester@gentoo.org> wmii-1.ebuild:
  Add ~amd64 keyword per bug #94998

*wmii-1 (01 Jun 2005)

  01 Jun 2005; Torsten Veller <tove@gentoo.org> -wmii-0.20050510.ebuild,
  +wmii-1.ebuild:
  First Relese. Removed cairo support because it's really broken.

  14 May 2005; Rene Nussbaumer <killerfox@gentoo.org>
  wmii-0.20050510.ebuild:
  added ~hppa

*wmii-0.20050510 (11 May 2005)

  11 May 2005; Torsten Veller <tove@gentoo.org> -wmii-0.20050506.ebuild,
  +wmii-0.20050510.ebuild:
  New snapshot.

*wmii-0.20050506 (06 May 2005)

  06 May 2005; Torsten Veller <tove@gentoo.org> metadata.xml,
  -wmii-0.20050504.ebuild, +wmii-0.20050506.ebuild:
  New snap.

*wmii-0.20050504 (04 May 2005)

  04 May 2005; Torsten Veller <tove@gentoo.org> -wmii-0.20050420.ebuild,
  +wmii-0.20050504.ebuild:
  New snapshot.

*wmii-0.20050420 (21 Apr 2005)

  21 Apr 2005; Torsten Veller <tove@gentoo.org> +files/wmii.desktop,
  +metadata.xml, +wmii-0.20050420.ebuild:
  Initial commit.
  Package.masked because it's a pre-release snapshot.
  Thanks to Ingo Bormuth, René Nussbaumer in bug #83500.
