@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 01e53f321d5d6ab0061bcbefffc4fe89 ChangeLog 1304
+MD5 c906c78fa9d92ca9ec155771808c81e7 wmii-1.1.ebuild 2014
+MD5 7b1a53f98d648a55652e3259027b84ec ChangeLog 1469
 MD5 f5ba35e50e57b9e6df75d700acc82da8 metadata.xml 700
-MD5 282852aa6089fbab5705754e48a4150a wmii-1.ebuild 1906
-MD5 8a7a9c0fee724824de19a9dfbcf8d701 files/digest-wmii-1 58
+MD5 080701816705482fee573518bbe73bec files/digest-wmii-1.1 60
 MD5 48b2aadadc04fa539467a05f3afa031e files/wmii.desktop 174
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFCogyjmOfEJZHYOKcRAnOEAJ9OBtwi+cLVAJDeGKML2FxqFMt4jgCg5hMH
-mJIOYhrVnN0lvk6voOQeHrw=
-=swrO
+iD8DBQFCrb9LV3J2n04EauwRAnasAJ98812cLO2qNQmBM3+AWn095a9etgCgx9Ts
+JztTd+FDQCn5xet0rOBMnos=
+=F/bx
 -----END PGP SIGNATURE-----
