@@ -1,6 +1,12 @@
 # ChangeLog for x11-wm/wmii
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/wmii/ChangeLog,v 1.7 2005/06/04 20:17:27 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/wmii/ChangeLog,v 1.8 2005/06/13 17:15:28 tove Exp $
+
+*wmii-1.1 (13 Jun 2005)
+
+  13 Jun 2005; Torsten Veller <tove@gentoo.org> -wmii-1.ebuild,
+  +wmii-1.1.ebuild:
+  Version bump.  Thanks to Yann Lamontagne (bug #95973).
 
   04 Jun 2005; Olivier Crête <tester@gentoo.org> wmii-1.ebuild:
   Add ~amd64 keyword per bug #94998
